# bussen

./: .dockerignore  Dockerfile  README.md  docker-compose.yml.example  pyproject.toml
.github/workflows/: docker.yaml  linting.yaml  testing.yaml
bussen/: db.sqlite3  manage.py
bussen/bussen/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
bussen/bussenGame/: consumers.py  views.py
nginx/conf.d/: games.conf
resources/: entrypoint.sh
website/: dump.rdb  manage.py
website/bussen/: __init__.py  admin.py  apps.py  asgi.py  consumers.py  converters.py  games.py  models.py  routing.py  services.py  urls.py  views.py  wsgi.py
website/bussen/migrations/: 0001_initial.py  0002_remove_busgamemodel_room.py  0003_auto_20201108_1507.py  0004_auto_20201112_1435.py
website/bussen/settings/: development.py  production.py  settings.py
website/bussen/templatetags/: game.py
website/games/: asgi.py  routing.py  services.py  urls.py  utils.py  views.py  wsgi.py
website/games/settings/: development.py  production.py  settings.py
website/rooms/: __init__.py  admin.py  apps.py  consumers.py  converters.py  forms.py  models.py  routing.py  services.py  urls.py  views.py
website/rooms/migrations/: 0001_initial.py  0002_auto_20201011_1412.py  0002_auto_20201108_1445.py  0003_auto_20201011_1603.py  0003_auto_20201108_1507.py  0004_auto_20201013_2145.py  0004_auto_20201108_1519.py  0005_auto_20201018_1407.py  0005_auto_20201111_1721.py  0006_auto_20201018_1542.py  0006_auto_20201112_1435.py  0007_auto_20201018_1944.py  0007_auto_20201112_1510.py  (+1 more)
(+74 files in other folders)
